[FIX] web_enterprise: fieldHtml: text and border bottom overlap
There is no need to remove the height of a line. We just have
to remove some existing margins and padding if the field html
widget is the last element.

In this commit, we get back to the same behavior as in saas-11.3.

Task ID: 1945024

closes odoo/enterprise#4046

--- a/web_enterprise/static/src/scss/form_view.scss
+++ b/web_enterprise/static/src/scss/form_view.scss
@@ -361,7 +361,7 @@
                         // If immediatly followed by an .oe_clear element, the note-editor it's the 'only'
                         // tab's element. Reset margins to push the bar at the bottom.
                         + .oe_clear:last-child {
-                            margin-bottom: -$o-horizontal-padding - $o-sheet-vpadding - ($o-root-font-size * ($font-size-base/1rem) * $line-height-base); // FIXME
+                            margin-bottom: -$o-horizontal-padding - $o-sheet-vpadding - $o-form-spacing-unit;
                         }
                     }
 
